tests/NormalTests/paczka1/small_fuzzy/42136121.err
Error in line 9: Ikg1Apo A437 16,13
Error in line 7: Ikg1Apo S431 79,1
Error in line 14: Vac2SVR S853 25,"
